# email_mailing

./: .env  .env_example  .gitignore  README.md  main.py  pyproject.toml
blog/: admin.py  forms.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_article_owner.py
blog/templates/blog/: article_detail.html  article_form.html  article_list.html
config/: asgi.py  settings.py  urls.py  wsgi.py
services/: __init__.py  admin.py  forms.py  mailing_job.py  mixins.py  models.py  urls.py  views.py
services/fixtures/: client.json  message.json  sendmail.json
services/management/commands/: settings_runapscheduler.py
services/migrations/: 0001_initial.py  0002_alter_sendmail_options_remove_client_is_blocked_and_more.py  0003_alter_client_email.py  0004_client_owner_sendmail_owner.py  0005_alter_sendmail_message.py  0006_remove_sendmail_message_message_send_mail.py  0007_sendmail_date_end_send.py  0008_alter_sendmail_date_end_send.py  0009_alter_sendmail_periodicity.py  0010_alter_sendmail_periodicity.py  0011_logs_send_mail.py
services/templates/services/: add_client.html  add_mailing.html  client_delete.html  client_detail.html  client_list.html  client_update.html  home.html  logs_list.html  sendmail_delete.html  sendmail_detail.html  sendmail_list.html  sendmail_update.html
templates/includes/: base.html  footer.html  header.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/fixtures/: groups.json
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_remove_user_is_manager.py
users/templates/user/: login.html  (+1 more)
(+1 files in other folders)
